# injective-core

./: .coderabbit.yaml  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  setup.sh  socket.yml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: docker-release-opensource.yaml  docker-release.yaml  open-source.yaml  publish-packages.yaml  release-core.yaml
cmd/injectived/: cmd_devnetify.go  flags.go  root.go  start.go
cmd/peggo/: options.go  orchestrator.go  tx.go  util.go
injective-chain/app/: app.go  app_devnet.go  upgrade.go
injective-chain/wasmbinding/: queries.go
injective-chain/websocket/: README.md  websocket.go  websocket_stream.go
interchaintest/: go.mod  go.sum  setup.go
interchaintest/circle/: create_namespace.go  deploy_permissions_hook.go  deploy_stablecoin.go  helpers.go  mint_usdc.go  pause_usdc.go  permissions_params.go
interchaintest/foundry/: Dockerfile  container.go
interchaintest/helpers/: cw.go  dynamic_fee.go  eth_keys.go  exchange.go  gov.go  hyperlane.go  ibchooks.go  peggy.go  query.go  staking.go  tx.go
interchaintest/testdata/: chainlink_reports_mainnet.json  chainlink_verifier_mainnet.json
packaging/: .gitignore  AGENTS.md  Dockerfile  Makefile  docker-bake.hcl
packaging/npm/: package.json.tmpl
packaging/pypi/injective-core/: README.md  hatch_build.py  pyproject.toml
packaging/pypi/injective-core/src/injective_core/: __init__.py
peggo/: .env.example
peggo/orchestrator/: batch_creator.go  health_check.go  oracle.go  orchestrator.go  relayer.go  signer.go
scripts/: peggo_wrappers.sh  precompiles-bindings.sh
scripts/compare-store-hashes/: main.go
scripts/hyperlane/: README.md  send_token.sh  updated-warp-config.yaml
(+285 files in other folders)
