[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injective-cli"
version = "1.17.2"
description = "Injective CLI - Injective blockchain node binary (injectived)"
readme = "README.md"
requires-python = ">=3.9"
license = "BSL-1.1"
authors = [{ name = "Injective Labs", email = "maxim@injectivelabs.org" }]
keywords = [
    "injective",
    "blockchain",
    "cosmos",
    "defi",
    "validator",
    "node",
    "injectived",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
injectived = "injective_core.cli:main"

[project.urls]
Homepage = "https://github.com/InjectiveFoundation/injective-core"
Repository = "https://github.com/InjectiveFoundation/injective-core"
Documentation = "https://docs.injective.network"
"Bug Tracker" = "https://github.com/InjectiveFoundation/injective-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/injective_core"]

[tool.hatch.build.targets.sdist]
include = ["/src/injective_core", "/README.md", "/LICENSE"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

# Platform-specific wheel configuration
# These are set during the build process via environment variables
[tool.hatch.build.targets.wheel.options]
plat-name = "any"
